// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`runOpen util on specify multiple absolute https URLs with pages in Google Chrome  1`] = `
Array [
  "https://example2.com",
  Object {
    "app": "Google Chrome",
    "wait": false,
  },
]
`;

exports[`runOpen util on specify multiple absolute https URLs with pages in Google Chrome  2`] = `
Array [
  "https://example3.com",
  Object {
    "app": "Google Chrome",
    "wait": false,
  },
]
`;

exports[`runOpen util on specify one relative URL and one absolute URL with pages in Google Chrome  1`] = `
Array [
  "https://example.com/index.html",
  Object {
    "app": "Google Chrome",
    "wait": false,
  },
]
`;

exports[`runOpen util on specify one relative URL and one absolute URL with pages in Google Chrome  2`] = `
Array [
  "https://example2.com",
  Object {
    "app": "Google Chrome",
    "wait": false,
  },
]
`;

exports[`runOpen util should open browser on specify URL with multiple pages inside array 1`] = `
Array [
  "https://example.com/index.html",
  Object {
    "wait": false,
  },
]
`;

exports[`runOpen util should open browser on specify URL with multiple pages inside array 2`] = `
Array [
  "https://example.com/index2.html",
  Object {
    "wait": false,
  },
]
`;

exports[`runOpen util should open browser on specify URL with page inside array 1`] = `
Array [
  "https://example.com/index.html",
  Object {
    "wait": false,
  },
]
`;
